renamed font-family variable name

--- a/public/css/owners/administrator.css
+++ b/public/css/owners/administrator.css
@@ -6,7 +6,7 @@
 
 /* get local font to the webpage */
 @font-face {
-    font-family: 'sfmy-regular';
+    font-family: 'sfy-regular';
     src: url('fonts/SF-Pro-Rounded-Regular.otf');
 }
 
@@ -25,7 +25,7 @@
     --fw-bold : 900;
     --fw-lightBold : 500;
 
-    --ff-family : 'sfmy-regular', sans-serif;
+    --ff-family : 'sfy-regular', sans-serif;
 }
 
 @media (min-width : 800px){
