--- a/public/css/owners/administrator.css
+++ b/public/css/owners/administrator.css
@@ -14,6 +14,7 @@
 :root{
     --clr-dark : #D9D9D9;
     --clr-light : #fff;
+    --clr-blackDark : rgb(0, 0, 0);
 
     --fs-h1 : 3rem;
     --fs-h2 : 2.25rem;
@@ -96,6 +97,21 @@ img{
     padding-left: 8%;
     line-height: 1.5rem;
     color: grey;
+}
+
+/* side bar TO DASHBOARD word add decoration */
+.detail__dashboard--name{
+    transition: 500ms;
+}
+
+a{
+    text-decoration: none;
+    color: var(--clr-blackDark);
+}
+
+.detail__dashboard--name:hover{
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 
