css file edited in ownerlandpage

--- a/public/css/owners/ownerLandPage.css
+++ b/public/css/owners/ownerLandPage.css
@@ -70,7 +70,7 @@ body{
     ;
 
     /* background-color: lightblue; */
-    margin: 2% 4%;
+    margin: 0% 4%;
     margin-bottom: 1%;
 }
 
@@ -231,7 +231,7 @@ img{
     align-items: center;
     justify-content: space-between;
     padding: .7%;
-    margin-top: .5%;
+    /* margin-top: .5%; */
     margin-right: 2%;
 }
 
