--- a/public/css/inc/header.css
+++ b/public/css/inc/header.css
@@ -72,3 +72,31 @@ img{
 .dashboard__icon:hover{
     transform: scale(1.1);
 }
+
+/* ***************************************************************************************************************  */
+/* ///////////////////////////////////// DROP DOWN FEATURE ///////////////////////////////////////////////////////// */
+/* The container <div> - needed to position the dropdown content */
+.dashboard__user__dropdown-content{
+    display: none;
+    position:absolute;
+    background-color: #f9f9f9;
+    min-width: 50px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dashboard__user__dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;  
+}
+
+/* Change color of dropdown links on hover */
+.dashboard__user__dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown_area:hover .dashboard__user__dropdown-content {
+
+    display: block;
+}
