further more implemented php file and side bar css file

--- a/public/css/inc/sidebar.css
+++ b/public/css/inc/sidebar.css
@@ -43,13 +43,11 @@ img{
     padding-left: 8%;
     line-height: 1.5rem;
     color: grey;
-}
 
-.users__submenu--mechanic{
     transition: 500ms;
 }
 
-.users__submenu--mechanic:hover{
+.submenu:hover{
     transform: scale(1.1);
 }
 
