--- a/public/css/admins/adminLandPage.css
+++ b/public/css/admins/adminLandPage.css
@@ -90,6 +90,26 @@ body{
     /* background-color: lightcoral */
 }
 
+/* .admin--button{
+    display: inline-block;
+    width: 100%;
+    height: 4rem;
+    background: black;
+    color: white;
+    padding: .5em 1.5em;
+    text-decoration: none;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: var(--fw-bold);
+    border-radius: 5px;
+
+    transition: 500ms;
+
+    margin-bottom: 5px;
+    
+    font-family: var(--ff-family);
+} */
+
 .upper__section--reports{
     grid-area: two;
     /* background-color: lightyellow; */
@@ -183,7 +203,7 @@ body{
 .btn{
     display: inline-block;
     width: 100%;
-    height: 3.2rem;
+    height: 4rem;
     background: black;
     color: white;
     padding: .5em 1.5em;
