--- a/public/css/owners/administrator.css
+++ b/public/css/owners/administrator.css
@@ -301,3 +301,15 @@ td{
     text-align: left;
 }
 
+tr{
+    height: 2rem;
+}
+
+/* /////////////////////////////////////////////////////////////////////////////////////////////////////////////////// */
+
+input[type="submit"]{
+    border: 3px solid black;
+    border-radius: 5px;
+
+}
+
