--- a/public/css/owners/ownerLandPage.css
+++ b/public/css/owners/ownerLandPage.css
@@ -69,9 +69,13 @@ body{
         "one two three four"
     ;
 
-    /* background-color: lightblue; */
+    /* background-color: blue; */
     margin: 0% 4%;
-    margin-bottom: 1%;
+    margin-bottom: 0%;
+}
+
+.anchor--card{
+    height: 100%;
 }
 
 /* card union property */
@@ -80,7 +84,7 @@ body{
     border-radius: 10px;
     padding: 2rem 2rem;
     padding-top: 1rem;
-    padding-bottom: 0.2rem;
+    padding-bottom: 2rem;
     background-color: #D9D9D9;
 }
 
@@ -92,6 +96,7 @@ body{
 
 .upper__section--reports{
     grid-area: two;
+    margin-bottom: 10%;
     /* background-color: lightyellow; */
 }
 
@@ -288,3 +293,4 @@ img{
 .dashboard__icon:hover{
     transform: scale(1.1);
 }
+
