--- a/public/css/owners/ownerViewsUserProfile.css
+++ b/public/css/owners/ownerViewsUserProfile.css
@@ -157,7 +157,7 @@ body{
 /* control imag behaviour */
 img{
     display: block;
-    max-width: 50%;
+    max-width: 8rem;
     border-radius: 50%;
     box-shadow: 0px 2px 60px rgba(0,0,0,0.5); /* add a shadow */
 }
