--- a/public/css/owners/ownerLandPage.css
+++ b/public/css/owners/ownerLandPage.css
@@ -290,3 +290,49 @@ img{
     transform: scale(1.1);
 }
 
+
+
+/* ***************************************************************************************************************  */
+/* ///////////////////////////////////// DROP DOWN FEATURE ///////////////////////////////////////////////////////// */
+/* The container <div> - needed to position the dropdown content */
+.dashboard__user__dropdown-content{
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* padding: 16px; */
+    border-radius: 10px;
+    transition: opacity 0.5s, visibility 0.5s;
+    margin-top: 7rem;
+}
+
+.dashboard__user__dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;  
+}
+
+/* Change color of dropdown links on hover */
+.dashboard__user__dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown_area{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+    cursor: pointer;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown_area:hover .dashboard__user__dropdown-content {
+    opacity: 1;
+    visibility: visible;
+}
