--- a/public/css/owners/ownerViewsUserProfile.css
+++ b/public/css/owners/ownerViewsUserProfile.css
@@ -59,7 +59,7 @@ body{
     font-family: var(--ff-family);
     font-size: var(--fs-body);
     line-height: 1.4;
-
+    background: linear-gradient(to left, #6c6c6c, #ebe9e9, #FFFFFF);
 }
 
 /* DATA AREA */
@@ -71,7 +71,7 @@ body{
     ;
 
     /* background-color: lightblue; */
-    margin: 10% 10%;
+    margin: 8% 10%;
 }
 
 
@@ -106,7 +106,7 @@ body{
     position: relative;
     cursor: pointer;
     margin-left: 10%;
-    box-shadow: 0px 2px 10px rgba(0,0,0,0.3); /* add a shadow */
+    box-shadow: 0px 2px 20px rgba(0,0,0,0.8); /* add a shadow */
 }
 
 .detail__view--card{
