--- a/public/css/admins/adminLandPage.css
+++ b/public/css/admins/adminLandPage.css
@@ -80,7 +80,7 @@ body{
     border-radius: 10px;
     padding: 2rem 2rem;
     padding-top: 1rem;
-    padding-bottom: 0.2rem;
+    padding-bottom: 2rem;
     background-color: #D9D9D9;
 }
 
@@ -197,22 +197,25 @@ body{
 .upper__section--buttons{
     background-color: var(--clr-light);
     margin: 0% 2%;
-    padding: 1rem 0rem;
+    padding: 0rem 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* gap: 1px; */
 }
 
 .btn{
     display: inline-block;
     width: 100%;
-    height: 4rem;
+    min-height: 3rem;
     background: black;
     color: white;
-    padding: .5em 1.5em;
+    padding: 2.5em 1.5em;
     text-decoration: none;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: var(--fw-bold);
     border-radius: 5px;
-
     transition: 500ms;
 
     margin-bottom: 5px;
@@ -228,8 +231,17 @@ body{
 .lower__section__card--title,
 .upper__section__card--title{
     font-weight: var(--fw-bold);
-}
+    display: flex;
+    width: max-content;
+    justify-content: center;
+    align-items:center;
+    transition: 500ms;
 
+}
+.lower__section__card--title:hover,
+.upper__section__card--title:hover{
+    transform: scale(1.09);
+}
 
 /* ***************************************************************************************************** */
 /* control imag behaviour */
@@ -301,4 +313,15 @@ img{
 
 .dashboard__icon:hover{
     transform: scale(1.1);
+}
+
+
+/* a:link, a:visited, a:hover, a:active{ 
+    text-decoration: none;
+
+} */
+
+a{
+    text-decoration: none;
+    color: var(--clr-blackDark);
 }
