--- a/public/css/riders/riderLandPage.css
+++ b/public/css/riders/riderLandPage.css
@@ -95,7 +95,7 @@ body{
     width: 100% !important;
 }
 
-#floating-panel {
+.floating-panel {
     position: absolute;
     width: 100%;
     height: 20%;
@@ -104,14 +104,18 @@ body{
     z-index: 10;
     background-color: #fff;
     padding: 5px;
+    padding-right: 5px;
+    padding-left: 5px;
     /* border: 1px solid #999; */
     border-radius: 30px 30px 0px 0px;
     padding-left: 10px;
     box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.1);
+    transition: all 1s;
 }
 
 #welcome_message{
     display: inline-block;
+    position: absolute;
     line-height: 10px;
     font-weight: var(--fw-lightMedium);
     margin: 0.5%;
@@ -154,6 +158,130 @@ body{
     color: #ffffff;
     font-family:"SF Pro Rounded";
 }
+
+.floating-panel.expanded{
+    height: 35%;
+}
+
+/***********INFO PANEL************/
+/*info, info_1 and info_2 are the classes for the info panel*/
+/*info1_title, info2_title, info1_number, infor2_number are the classes for the title for each info_1 and info_2 panel*/
+
+.area_details{
+    z-index: 9;
+    display: none;
+}
+
+.area_name{
+    margin: 0.5%;
+    padding-left: 2.5%; 
+}
+
+.info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin:10%;
+    margin-top: 3%;
+    margin-bottom: 1%;
+    padding : 1%;
+}
+
+.info_1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100px;
+    margin: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.info_2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100px;
+    margin: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.info_title{
+    font-size: 15px;
+    font-weight: var(--fw-lightBold);
+    margin: 0.5%;
+    text-align: center;
+}
+
+.info_number{
+    font-size: 24px;
+    font-weight: var(--fw-lightBold);
+    margin: 0.5%;
+    text-align: center;
+}
+
+.action_buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5% !important;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding : 1%;
+}
+
+
+.vl {
+    border-left: 1px solid rgb(217, 217, 217);
+    height: 50px;
+  }
+
+  .cross{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding : 1%;
+    width:58px;
+    height: 58px;
+    font-size: 20px;
+    border-radius: 100px;
+    border-color: #000000;
+    border: 1px solid;
+    /* background-color: aqua; */
+  }
+
+  .cross img{
+    width: 50%;
+    height: 50%;
+  }
+
+  .directions{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    margin: 0.5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding : 10%;
+    width:238px;
+    height: 58px;
+    font-size: 20px;
+    border-radius: 60px;
+    border-color: #000000;
+    border: 1px solid;
+    /* background-color: aqua; */
+  }
+
 
 /* ***************************************************************************************************** */
 /* control imag behaviour */
