--- a/public/css/riders/ongoingRide.css
+++ b/public/css/riders/ongoingRide.css
@@ -151,35 +151,6 @@ body{
     padding : 1%;
 }
 
-/* #qr_message{
-    display: inline-block;
-    font-size: 1.5rem;
-    font-weight: var(--fw-lightBold);
-    margin: 1%;
-}
-
-#scan_button{
-    display: flex;
-    position: absolute;
-    width: 146px;
-    height: 58px;
-    right: 2.5%;
-    top: 23px;
-    background: #000000;
-    border-radius: 60px;
-    filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.15));
-    align-items: center;
-    justify-content: center;
-}
-
-#marker-position{
-    font-size: "40px";
-}
-
-.floating-panel.expanded{
-    height: 35%;
-} */
-
 .big_marker{
     font-size: "100px";
     color: #ffffff;
@@ -207,6 +178,7 @@ body{
     margin-top: 3%;
     margin-bottom: 1%;
     padding : 1%;
+    z-index: 2;
 }
 
 .info_1{
@@ -256,6 +228,7 @@ body{
     margin-bottom: 1%;
     padding : 1%;
     width: 90%;
+    z-index: 9;
 }
 
 
@@ -310,13 +283,6 @@ body{
 a:link {
     color: black;
     text-decoration: none;
-}
-
-a:hover{
-    color: black;
-    text-decoration: none;
-    /* becomes a little bigger */
-    transform: scale(1.1);
 }
 
 #white_text{
