--- a/public/css/owners/ownerViewsUserProfile.css
+++ b/public/css/owners/ownerViewsUserProfile.css
@@ -137,22 +137,21 @@ body{
 /* **************************************************************************************************************** */
 
 .btn{
-    display: inline-block;
-    width: 100%;
-    height: 3.2rem;
-    background: black;
+    border-color: black;
+    border-width: .5px;
+    margin: 0 auto;
+    width: 130px;
+    height: 45px;
     color: white;
-    padding: .5em 1.5em;
-    text-decoration: none;
-    cursor: pointer;
-    text-transform: uppercase;
+    background: black;
+    border-radius: 20px;
     font-weight: var(--fw-bold);
-    border-radius: 5px;
+    letter-spacing: 1px;
 
     transition: 500ms;
 
-    margin-bottom: 5px;
-    
+    padding: 2%;
+
     font-family: var(--ff-family);
 }
 
