extra css style checked but commmented

--- a/public/css/owners/addUser.css
+++ b/public/css/owners/addUser.css
@@ -361,3 +361,20 @@ img{
 .detailbox_userrole{
     width: 50%;
 }
+
+
+
+
+/* ********************************************************************************************************* */
+
+/* ///////////////////////////////  EXTRA //////////////////////////// */
+/* .modal{
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    top: 0;
+    width: 75%;
+    height: 80%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+} */
