--- a/public/css/owners/ownerLandPage.css
+++ b/public/css/owners/ownerLandPage.css
@@ -174,27 +174,24 @@ body{
 .upper__section--buttons{
     background-color: var(--clr-light);
     margin: 0% 2%;
-    padding: 1rem 0rem;
+    padding: 0rem 0rem;
 }
 
 .btn{
     display: inline-block;
     width: 100%;
-    height: 3.2rem;
+    height: 3.5rem;
     background: black;
     color: white;
-    padding: .5em 1.5em;
+    padding: 0.5em 1.5em;
     text-decoration: none;
     cursor: pointer;
     text-transform: uppercase;
     font-weight: var(--fw-bold);
     border-radius: 5px;
-
     transition: 500ms;
-
-    margin-bottom: 5px;
-    
-    font-family: var(--ff-family);
+    margin-bottom: 10px;
+    font-family: var(--ff-family)
 }
 
 .btn:hover{
