--- a/public/css/owners/statistics.css
+++ b/public/css/owners/statistics.css
@@ -158,7 +158,7 @@ input[type="checkbox"]{
 
 .admin_data_area{
     /* margin-top: 3rem; */
-    margin-left: 2%;
+    margin-left: 1%;
     width: 100%;
     background-color: var(--clr-light);
 }
@@ -243,7 +243,7 @@ img{
 /* ///////////////////////////////  REAL DATA AREA TOP TITLE AND TWO BUTTON ROW//////////////////////////// */
 .data__area__top--fare--rate--button,
 .data__area--top{
-    margin-top:1%;
+    margin-bottom:1%;
     overflow: hidden;
 }
 
@@ -274,7 +274,7 @@ img{
     ;
 
     /* background-color: lightblue; */
-    margin-top: 2%;
+    margin-top: 0%;
     margin-right: 5%;
 }
 
