--- a/public/css/riders/viewProfile.css
+++ b/public/css/riders/viewProfile.css
@@ -215,11 +215,13 @@ body{
     align-items: center;
     width: 354px;
     height: 59px;
+    font-size: 19.2px;
     background: #ffffff;
     border: 1px solid #000000;
     border-radius: 60px;
     padding-left: 13px;
     padding-right: 13px;
+    margin-top: 20px;
     color: rgb(0, 0, 0);
     filter: drop-shadow(0px 4px 12px rgba(0, 0, 0, 0.05));
     
