admin rides page fixed, small UI adjustments, inital add report page

--- a/public/css/admins/administrator.css
+++ b/public/css/admins/administrator.css
@@ -14,7 +14,7 @@
 :root{
     --clr-dark : #D9D9D9;
     --clr-light : #fff;
-    --clr-blackDark : rgb(0, 0, 0);
+    /* --clr-blackDark : rgb(0, 0, 0); */
 
     --fs-h1 : 3rem;
     --fs-h2 : 2.25rem;
