--- a/public/css/inc/header-admin.css
+++ b/public/css/inc/header-admin.css
@@ -54,6 +54,10 @@ img{
     margin-right: 2%;
 }
 
+/* .imgProperty{
+    max-width: 40px;
+    border-radius: 50%;
+} */
 
 .dashboard__icon{
     max-width: 30px;
@@ -76,15 +80,15 @@ img{
     opacity: 0;
     visibility: hidden;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 10%;
+    left: 10%;
     transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     /* padding: 16px; */
     border-radius: 10px;
     transition: opacity 0.5s, visibility 0.5s;
-    margin-top: 7rem;
+    margin-top: 5rem;
 }
 
 .dashboard__user__dropdown-content a{
@@ -98,7 +102,6 @@ img{
 .dashboard__user__dropdown-content a:hover {background-color: #f1f1f1}
 
 .dropdown_area{
-
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -114,4 +117,3 @@ img{
     opacity: 1;
     visibility: visible;
 }
-
