--- a/public/css/admins/adminLandPage.css
+++ b/public/css/admins/adminLandPage.css
@@ -250,6 +250,16 @@ img{
     max-width: 100%;
 }
 
+.title{
+    text-decoration: none;
+    color: var(--clr-blackDark);
+}
+
+
+/* ***************************************************************************************************** */
+
+/* *********************************************************************************************************** */
+/* ///////////////////////////////////  DASHBOARD  //////////////////////////////////////////////////////////// */
 
 .dashboard--header{
     display: flex;
@@ -257,7 +267,7 @@ img{
     align-items: center;
     justify-content: space-between;
     padding: .7%;
-    /* margin-top: .5%; */
+    margin-top: .5%;
     margin-right: 2%;
 }
 
@@ -267,6 +277,7 @@ img{
 }
 
 .dashboard__header--search{
+    margin-left: 20%;
     width: 30%;
 }
 
@@ -296,10 +307,10 @@ img{
     margin-right: 2%;
 }
 
-.imgProperty{
+/* .imgProperty{
     max-width: 40px;
     border-radius: 50%;
-}
+} */
 
 .dashboard__icon{
     max-width: 30px;
@@ -315,13 +326,48 @@ img{
     transform: scale(1.1);
 }
 
-
-/* a:link, a:visited, a:hover, a:active{ 
-    text-decoration: none;
-
-} */
-
-a{
-    text-decoration: none;
-    color: var(--clr-blackDark);
+/* ***************************************************************************************************************  */
+/* ///////////////////////////////////// DROP DOWN FEATURE ///////////////////////////////////////////////////////// */
+/* The container <div> - needed to position the dropdown content */
+.dashboard__user__dropdown-content{
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* padding: 16px; */
+    border-radius: 10px;
+    transition: opacity 0.5s, visibility 0.5s;
+    margin-top: 5rem;
 }
+
+.dashboard__user__dropdown-content a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;  
+}
+
+/* Change color of dropdown links on hover */
+.dashboard__user__dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown_area{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+    cursor: pointer;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown_area:hover .dashboard__user__dropdown-content {
+    opacity: 1;
+    visibility: visible;
+}
+
