--- a/public/css/mechanics/mechanicLandPage.css
+++ b/public/css/mechanics/mechanicLandPage.css
@@ -42,8 +42,6 @@ table{
     width: 100%;
 }
 
-
-
 th{
     font-size: small;
     color: gray;
@@ -64,9 +62,9 @@ body{
 }
 
 /* UPPER SECTION */
-.upper_section{
-    display: grid;,
-    grid-template-columns:  1fr 1fr 1fr;
+.upper__section{
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
     grid-template-areas: 
         "two three four"
     ;
@@ -85,12 +83,12 @@ body{
     padding-bottom: 2rem;
     background-color: #D9D9D9;
 }
-
+/* 
 .upper__section--buttons{
-    grid-area: one;
+    grid-area: one; */
 
     /* background-color: lightcoral */
-}
+/* } */
 
 /* .admin--button{
     display: inline-block;
@@ -156,7 +154,7 @@ body{
 
 
 
-/* .lower_section--statistics{
+.lower_section--statistics{
     background-color: #D9D9D9;
     grid-area: righter;
     margin: 0% 2%;
@@ -164,7 +162,7 @@ body{
     padding: 2rem 2rem;
     padding-bottom: 2rem;
 
-} */
+}
 
 
 .lower__section__card--title{
@@ -173,7 +171,7 @@ body{
 
 /* static card */
 
-/* .static__image{
+.static__image{
     height: 26vh;
     background-image: url('http://localhost/Bikable/images/owners/landPageImages/stat.png');
     background-position: center;
@@ -181,9 +179,9 @@ body{
     background-blend-mode: multiply;
 
     border-radius: 5px;
-} */
+}
 
-/* .static__graph{
+.static__graph{
     height: 16vh;
     background-image: url('http://localhost/Bikable/images/owners/landPageImages/graph.png');
     background-position: center;
@@ -191,7 +189,7 @@ body{
     background-blend-mode: multiply;
 
     border-radius: 5px;
-} */
+}
 
 /* **************************************************************************************************************** */
 /* button adjustment */
@@ -252,6 +250,16 @@ img{
     max-width: 100%;
 }
 
+.title{
+    text-decoration: none;
+    color: var(--clr-blackDark);
+}
+
+
+/* ***************************************************************************************************** */
+
+/* *********************************************************************************************************** */
+/* ///////////////////////////////////  DASHBOARD  //////////////////////////////////////////////////////////// */
 
 .dashboard--header{
     display: flex;
@@ -259,7 +267,7 @@ img{
     align-items: center;
     justify-content: space-between;
     padding: .7%;
-    /* margin-top: .5%; */
+    margin-top: .5%;
     margin-right: 2%;
 }
 
@@ -269,6 +277,7 @@ img{
 }
 
 .dashboard__header--search{
+    margin-left: 20%;
     width: 30%;
 }
 
@@ -298,10 +307,10 @@ img{
     margin-right: 2%;
 }
 
-.imgProperty{
+/* .imgProperty{
     max-width: 40px;
     border-radius: 50%;
-}
+} */
 
 .dashboard__icon{
     max-width: 30px;
@@ -317,13 +326,47 @@ img{
     transform: scale(1.1);
 }
 
+/* ***************************************************************************************************************  */
+/* ///////////////////////////////////// DROP DOWN FEATURE ///////////////////////////////////////////////////////// */
+/* The container <div> - needed to position the dropdown content */
+.dashboard__user__dropdown-content{
+    opacity: 0;
+    visibility: hidden;
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* padding: 16px; */
+    border-radius: 10px;
+    transition: opacity 0.5s, visibility 0.5s;
+    margin-top: 5rem;
+}
 
-/* a:link, a:visited, a:hover, a:active{ 
+.dashboard__user__dropdown-content a{
+    color: black;
+    padding: 12px 16px;
     text-decoration: none;
+    display: block;  
+}
 
-} */
+/* Change color of dropdown links on hover */
+.dashboard__user__dropdown-content a:hover {background-color: #f1f1f1}
 
-a{
-    text-decoration: none;
-    color: var(--clr-blackDark);
+.dropdown_area{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+    cursor: pointer;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown_area:hover .dashboard__user__dropdown-content {
+    opacity: 1;
+    visibility: visible;
 }
